# pixie

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
icons/: color_tool.png~  draw_tool.png~  erase_tool.png~
managers/: PaletteManager.cpp  PaletteManager.h
utils/: BrailleConverter.cpp  BrailleConverter.h
windows/: CanvasWidget.cpp  CanvasWidget.h  ColorPaletteWidget.cpp  ColorPaletteWidget.h  MainWindow.cpp  MainWindow.h  PreviewWindow.cpp  PreviewWindow.h  ToolPanelWidget.cpp  ToolPanelWidget.h
windows/customButtons/: ColorButton.cpp  ColorButton.h  CustomButton.cpp  CustomButton.h
windows/special/: GridWidget.h
